# sdl2-platformer

./: .gitignore  CMakeLists.txt  Character.cpp  Character.h  Game.cpp  Game.h  LButton.cpp  LButton.h  LTexture.cpp  LTexture.h  LTimer.cpp  LTimer.h  README.md  defs.h  main.cpp  structs.h
